// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render > gap > render(Box { content: [ Box { content: [ 'A', 'B', 'C' ], border: Border { edges: Borde...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌────────────────────┐
│┌──────────────────┐│
││A                 ││
││                  ││
││B                 ││
││                  ││
││C                 ││
│└──────────────────┘│
│                    │
│                    │
│                    │
│                    │
│                    │
│                    │
│                    │
│                    │
│                    │
│                    │
│                    │
└────────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > gap > render(Box { content: [ Box { content: [ 'A', 'B', 'C' ], border: Border { edges: Borde...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌────────────────────┐
│┌──────────────────┐│
││A                 ││
││B                 ││
││C                 ││
│└──────────────────┘│
│                    │
│                    │
│                    │
│                    │
│                    │
│                    │
│                    │
│                    │
│                    │
│                    │
│                    │
│                    │
│                    │
└────────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > gap > render(Box { content: [ Box { content: [ 'A', 'B', 'C' ], orientation: 'horizontal', bo...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──────────────────────────────────────┐
│┌──────────────────┐                  │
││A B C             │                  │
│└──────────────────┘                  │
└──────────────────────────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > margin > render(Box { content: [ Box { content: '', border: Border { edges: BorderEdges { top: '...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──────────────────┐
│   ┌───────┐      │
│   │       │      │
│   └───────┘      │
└──────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > margin > render(Box { content: [ Box { content: '', border: Border { edges: BorderEdges { top: '...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──────────────────┐
│                  │
│   ┌───────┐      │
│   │       │      │
│   └───────┘      │
│                  │
│                  │
│                  │
│                  │
└──────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > margin > render(Box { content: [ Box { content: '', border: Border { edges: BorderEdges { top: '...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──────────────────┐
│                  │
│    ┌───────┐     │
│    │       │     │
│    └───────┘     │
│                  │
│                  │
│                  │
│                  │
└──────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > padding > render(Box { content: [ Box { content: '', padding: Padding { crossStart: 10n }, border...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──────────────────┐
│┌───────┐         │
││       │         │
│└───────┘         │
└──────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > padding > render(Box { content: [ Box { content: '', padding: Padding { mainStart: 10n, mainEnd: ...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──────────────────┐
│┌───────┐         │
││       │         │
│└───────┘         │
└──────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > padding > render(Box { content: [ Box { content: '', padding: Padding { mainStart: 10n, mainEnd: ...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──────────────────┐
│┌───────────┐     │
││           │     │
│└───────────┘     │
└──────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > padding > render(Box { content: [ Box { content: '', padding: Padding { mainStart: 20n, mainEnd: ...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──────────────────┐
│┌───────┐         │
││       │         │
│└───────┘         │
└──────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > span > render(Box { content: [ Box { content: '', border: Border { edges: BorderEdges { top: '...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──────────────────┐
│┌────────────────┐│
││                ││
│└────────────────┘│
└──────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > span > render(Box { content: [ Box { content: '', border: Border { edges: BorderEdges { top: '...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──────────────────┐
│          ┌──────┐│
│          │      ││
│          └──────┘│
└──────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > span > render(Box { content: [ Box { content: '', border: Border { edges: BorderEdges { top: '...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
--─────────────────┐
--┌───────────────┐│
--│               ││
--└───────────────┘│
--─────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > span > render(Box { content: [ Box { content: '', border: Border { edges: BorderEdges { top: '...) 4`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──────────────────┐
│┌───────┐         │
││       │         │
││       │         │
│└───────┘         │
│                  │
│                  │
│                  │
│                  │
└──────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > span > render(Box { content: [ Box { content: '', border: Border { edges: BorderEdges { top: '...) 5`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──────────────────┐
│┌──────┐          │
││      │          │
││      │          │
│└──────┘          │
│                  │
│                  │
│                  │
│                  │
└──────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > span > render(Box { content: [ Box { content: '', border: Border { edges: BorderEdges { top: '...) 6`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──────────────────┐
│┌───────┐         │
││       │         │
││       │         │
│└───────┘         │
│                  │
│                  │
│                  │
│                  │
└──────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > span > render(Box { content: [ Box { content: '', border: Border { edges: BorderEdges { top: '...) 7`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──────────────────┐
│┌────────────────┐│
││                ││
││                ││
│└────────────────┘│
│                  │
│                  │
│                  │
│                  │
└──────────────────┘
╚══════════════════════════════════════════════════╝"
`;
